--- a/src/C195/view/apptRep.fxml
+++ b/src/C195/view/apptRep.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -31,12 +34,20 @@
          </font>
       </Label>
       <ComboBox fx:id="month" layoutX="171.0" layoutY="221.0" onAction="#onMonth" prefWidth="150.0" />
-      <TableView fx:id="apptTypeTable" layoutX="484.0" layoutY="63.0" prefHeight="319.0" prefWidth="437.0">
+      <TableView fx:id="apptTypeTable" layoutX="480.0" layoutY="28.0" prefHeight="70.0" prefWidth="437.0">
         <columns>
           <TableColumn fx:id="apptType" prefWidth="318.0" text="Appointment Type" />
           <TableColumn fx:id="apptTotal" prefWidth="118.0" text="Total" />
         </columns>
       </TableView>
         <Button fx:id="signOut" layoutX="886.0" layoutY="436.0" mnemonicParsing="false" onAction="#onSignOut" text="Sign out" />
+      <BarChart fx:id="typeBarChart" layoutX="417.0" layoutY="147.0" prefHeight="274.0" prefWidth="500.0">
+        <xAxis>
+          <CategoryAxis prefHeight="0.0" prefWidth="443.0" side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
     </AnchorPane>
 </SplitPane>
