--- a/src/C195/view/modAppt.fxml
+++ b/src/C195/view/modAppt.fxml
@@ -84,7 +84,7 @@
                 <Font size="16.0" />
             </font>
         </Label>
-        <TextField fx:id="modApptType" layoutX="570.0" layoutY="367.0" prefHeight="25.0" prefWidth="174.0" />
+        <ComboBox fx:id="modApptType" layoutX="570.0" layoutY="367.0" onAction="#onModApptType" prefHeight="25.0" prefWidth="174.0" />
         <Label layoutX="810.0" layoutY="340.0" text="Location:">
             <font>
                 <Font size="16.0" />
