--- a/src/C195/view/addClient.fxml
+++ b/src/C195/view/addClient.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.17224080267558528" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="1100.0" style="-fx-background-color: #0588FA;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="C195.controller.addCustForm">
+<SplitPane dividerPositions="0.17224080267558528" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="1100.0" style="-fx-background-color: #0588FA;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="C195.controller.addClientForm">
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
         <Label layoutX="364.0" layoutY="15.0" text="Add A Customer">
             <font>
@@ -18,7 +18,7 @@
         <ComboBox fx:id="menu" layoutX="934.0" layoutY="60.0" onAction="#onMenu" prefWidth="150.0" promptText="Menu" />
     </AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="457.0" prefWidth="527.0" style="-fx-background-color: #0588FA;">
-        <Button layoutX="238.0" layoutY="324.0" mnemonicParsing="false" onAction="#onCustSave" text="Add Customer" />
+        <Button layoutX="238.0" layoutY="324.0" mnemonicParsing="false" onAction="#onClientSave" text="Add Client" />
         <Button layoutX="833.0" layoutY="438.0" mnemonicParsing="false" onAction="#onSignOut" text="Sign out" />
         <Label layoutX="239.0" layoutY="92.0" text="ID:">
             <font>
@@ -31,8 +31,8 @@
                 <Font size="16.0" />
             </font>
         </Label>
-        <TextField fx:id="addCustName" layoutX="373.0" layoutY="119.0" prefHeight="25.0" prefWidth="209.0" />
-        <TextField fx:id="addCustPhone" layoutX="646.0" layoutY="119.0" prefHeight="25.0" prefWidth="162.0" />
+        <TextField fx:id="addClientName" layoutX="373.0" layoutY="119.0" prefHeight="25.0" prefWidth="209.0" />
+        <TextField fx:id="addClientPhone" layoutX="646.0" layoutY="119.0" prefHeight="25.0" prefWidth="162.0" />
         <Label layoutX="646.0" layoutY="93.0" text="Phone Number:">
             <font>
                 <Font size="16.0" />
@@ -43,17 +43,17 @@
                 <Font size="16.0" />
             </font>
         </Label>
-        <TextField fx:id="addCustAddress" layoutX="238.0" layoutY="187.0" prefHeight="25.0" prefWidth="209.0" />
-      <TextField fx:id="addCustCity" layoutX="499.0" layoutY="187.0" prefHeight="25.0" prefWidth="130.0" />
-      <TextField fx:id="addCustCounty" layoutX="676.0" layoutY="187.0" prefHeight="25.0" prefWidth="130.0" />
+        <TextField fx:id="addClientAddress" layoutX="238.0" layoutY="187.0" prefHeight="25.0" prefWidth="209.0" />
+      <TextField fx:id="addClientCity" layoutX="499.0" layoutY="187.0" prefHeight="25.0" prefWidth="130.0" />
+      <TextField fx:id="addClientCounty" layoutX="676.0" layoutY="187.0" prefHeight="25.0" prefWidth="130.0" />
         <Label layoutX="697.0" layoutY="233.0" text="Postal Code:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <TextField fx:id="addCustPostal" layoutX="697.0" layoutY="259.0" prefHeight="25.0" prefWidth="111.0" />
-        <ComboBox fx:id="addCustCountry" layoutX="238.0" layoutY="259.0" onAction="#onCustCountry" prefWidth="150.0" promptText=" " />
-        <ComboBox fx:id="addCustState" layoutX="465.0" layoutY="259.0" onAction="#onCustState" prefWidth="150.0" promptText=" " />
+        <TextField fx:id="addClientPostal" layoutX="697.0" layoutY="259.0" prefHeight="25.0" prefWidth="111.0" />
+        <ComboBox fx:id="addClientCountry" layoutX="238.0" layoutY="259.0" onAction="#onClientCountry" prefWidth="150.0" promptText=" " />
+        <ComboBox fx:id="addClientState" layoutX="465.0" layoutY="259.0" onAction="#onClientState" prefWidth="150.0" promptText=" " />
         <Label layoutX="239.0" layoutY="233.0" text="Country:">
             <font>
                 <Font size="16.0" />
@@ -64,7 +64,7 @@
                 <Font size="16.0" />
             </font>
         </Label>
-      <Button layoutX="347.0" layoutY="324.0" mnemonicParsing="false" onAction="#onCustCancel" text="Cancel" />
+      <Button layoutX="347.0" layoutY="324.0" mnemonicParsing="false" onAction="#onClientCancel" text="Cancel" />
       <Label layoutX="498.0" layoutY="161.0" text="City:">
          <font>
             <Font size="16.0" />
